# hacspec

examples/: Cargo.toml  katex-header.html
examples/halo2/: Cargo.toml  protocol.html  protocol.md  scratch.md  table.md  table.md.bak
examples/halo2/src/: halo2.rs
examples/pasta/src/: pasta.rs
examples/pasta/tests/: test_pasta.rs
examples/plonkish/: Cargo.toml
examples/plonkish/src/: plonkish.rs
examples/polynomial/: Cargo.toml
examples/polynomial/src/: polynomial.rs
examples/weierstrass-curves/: Cargo.toml
examples/weierstrass-curves/src/: weierstrass.rs
language/: Cargo.toml
